--- a/src/content/technotes/TN0024-deprecations.mdx
+++ b/src/content/technotes/TN0024-deprecations.mdx
@@ -40,6 +40,10 @@ extend type Query {
 
 ## Use field usage metrics to assess when it's safe to remove fields
 
-After a service's schema has been updated with new `@deprecated` directives, it's important to communicate the deprecations beyond the SDL as well. Using a dedicated Slack channel or team meetings may serve as appropriate communication channels for such notices, and they should be delivered with any additional migration instructions for client teams.
+After a service's schema has been updated with new `@deprecated` directives, it's important to communicate the deprecations beyond the SDL as well. Using a dedicated Slack channel or team meetings might serve as appropriate communication channels for such notices, and they should be delivered with any additional migration instructions for client teams.
 
-At this point, a crucial question still remains: "When will it be safe to remove the deprecated field?" To answer this question with certainty that you won't cause any breaking changes to client applications, you must lean on your observability tooling. Specifically, the _Requested by operations in the last day_ column in the Fields page in [GraphOS Studio](/graphos/) can provide insight into what clients may still be using the deprecated fields so appropriate follow-ups can be actioned. In addition, [schema checks](/graphos/delivery/schema-checks) will check any changes pushed for registered schemas against a recent window of operation tracing data to ensure that a deprecated field rollover can be completed without causing any breaking changes to existing clients.
+At this point, a crucial question still remains: "When will it be safe to remove the deprecated field?" To answer this question with certainty that you won't cause any breaking changes to client applications, you must lean on your observability tooling.
+
+Specifically, the _Requested by operations in the last day_ column in the Fields page in [GraphOS Studio](/graphos/) can provide insight into what clients might still be using the deprecated fields so appropriate follow-ups can be actioned.
+
+In addition, [schema checks](/graphos/delivery/schema-checks) will check any changes pushed for registered schemas against a recent window of operation tracing data to ensure that a deprecated field rollover can be completed without causing any breaking changes to existing clients. It's common to [require that clients identify themselves](/technotes/TN0001-client-id-enforcement) so that you can reach out to them before making a breaking change.
